--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "dependencies": {
     "flux": "^2.1.1",
     "react": "^0.14.5",
-    "react-dom": "^0.14.5"
+    "react-dom": "^0.14.5",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.5",
+    "redux-thunk": "^1.0.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
@@ -16,10 +19,10 @@
     "uglify": "^0.1.5",
     "watchify": "^3.6.1"
   },
-  "main": "js/app.js",
+  "main": "js/index.js",
   "scripts": {
-    "build-js": "browserify js/app.js | uglifyjs -cm > js/bundle.min.js",
-    "watch": "watchify -o js/bundle.js -v -d js/app.js"
+    "build-js": "browserify js/index.js | uglifyjs -cm > js/bundle.min.js",
+    "watch": "watchify -o js/bundle.js -v -d js/index.js"
   },
   "browserify": {
     "transform": [
