--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
+    "react-hot-loader": "^1.3.0",
     "uglify": "^0.1.5",
     "watchify": "^3.6.1"
   },
