--- a/package.json
+++ b/package.json
@@ -3,39 +3,30 @@
   "version": "0.0.1",
   "description": "Turn Twitter identifiers into JSON",
   "repository": "https://github/com/hydrator",
-  "dependencies": {
-    "flux": "^2.1.1",
-    "react": "^0.14.5",
-    "react-dom": "^0.14.5",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.5",
-    "redux-thunk": "^1.0.3"
+  "scripts": {
+    "build:lib": "babel js --out-dir lib",
+    "build:umd": "webpack --config webpack.prod.config.js js/index.js",
+    "build": "npm run build:lib && npm run build:umd",
+    "start": "node server.js",
+    "lint": "eslint src"
   },
   "devDependencies": {
+    "babel-cli": "^6.4.5",
+    "babel-core": "^6.0.20",
+    "babel-eslint": "^4.1.3",
+    "babel-loader": "^6.0.1",
     "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "^12.0.1",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.0.15",
+    "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
-    "uglify": "^0.1.5",
-    "watchify": "^3.6.1"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   },
-  "main": "js/index.js",
-  "scripts": {
-    "build-js": "browserify js/index.js | uglifyjs -cm > js/bundle.min.js",
-    "watch": "watchify -o js/bundle.js -v -d js/index.js"
-  },
-  "browserify": {
-    "transform": [
-      [
-        "babelify",
-        {
-          "presets": [
-            "es2015",
-            "react"
-          ]
-        }
-      ]
-    ]
+  "dependencies": {
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.6",
+    "redux-thunk": "^1.0.3"
   }
 }
