--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.6",
+    "redux": "^3.0.6",
     "redux-thunk": "^1.0.3"
   }
 }
