--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:lib": "babel src --out-dir lib",
     "build:umd": "webpack --config webpack.prod.config.js src/index.js",
     "build": "npm run build:lib && npm run build:umd",
-    "start": "node server.js",
+    "dev-server": "node server.js",
     "lint": "eslint src"
   },
   "devDependencies": {
