--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "clean": "rimraf lib static",
     "build:lib": "babel src --out-dir lib",
     "build:umd": "webpack --config webpack.prod.config.js src/index.js",
-    "build": "npm run build:lib && npm run build:umd",
-    "dev-server": "node server.js",
-    "lint": "eslint src"
+    "package": "electron-packager . Hydrator --platform=darwin --arch=x64 --overwrite",
+    "build": "npm run build:lib && npm run build:umd && npm run package",
+    "start": "ENV=dev Electron .",
+		"watch": "webpack-dev-server -d --config webpack.dev.config.js"
   },
   "devDependencies": {
     "babel-cli": "^6.4.5",
@@ -19,6 +20,8 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.0.15",
+    "electron-packager": "^5.2.1",
+    "electron-rebuild": "^1.1.2",
     "eslint-plugin-react": "^3.6.2",
     "react-hot-loader": "^1.3.0",
     "rimraf": "^2.5.1",
@@ -26,6 +29,7 @@
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "electron-prebuilt": "^0.36.6",
     "react": "^0.14.0",
     "react-dom": "^0.14.0",
     "react-redux": "^4.0.6",
