--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:umd": "webpack --config webpack.prod.config.js src/index.js",
     "package": "electron-packager . Hydrator --platform=darwin --arch=x64 --overwrite --icon=./static/img/hydrator.icns",
     "build": "npm run build:lib && npm run build:umd && npm run package",
-    "start": "ENV=dev Electron .",
+    "start": "ENV=dev Electron index.js",
 		"devserver": "webpack-dev-server -d --config webpack.dev.config.js"
   },
   "devDependencies": {
