--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
   "dependencies": {
     "css-modules-require-hook": "^4.0.0",
     "electron-debug": "^1.0.0",
+    "electron-json-storage": "^2.0.0",
     "font-awesome": "^4.6.3",
     "postcss": "^5.0.21",
     "react": "^15.1.0",
@@ -105,6 +106,7 @@
     "react-router": "^2.4.1",
     "react-router-redux": "^4.0.4",
     "redux": "^3.5.2",
+    "redux-electron-store": "^0.3.11",
     "redux-thunk": "^2.1.0",
     "source-map-support": "^0.4.0"
   },
