--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "electron-debug": "^1.0.0",
     "electron-json-storage": "^2.0.0",
     "font-awesome": "^4.6.3",
+    "numeraljs": "^1.5.6",
     "postcss": "^5.0.21",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
